CRUD on reviews

--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,7 +1,31 @@
 <h1><%= @product.name %></h1>
 
-<p><%= link_to "Edit", edit_product_path(@product) %></p>
-<p><%= link_to "Delete", product_path(@product),
+<h3>Date Caught: <%= @product.date_caught%></h3>
+<h3>Location: <%= @product.origin%></h3>
+<h3>Price: $<%= @product.price%>/lb</h3>
+
+<% if @product.reviews.any? %>
+  <h4>Here are the reviews for this product:</h4>
+
+  <ul>
+    <% @product.reviews.each do |review| %>
+      <li>
+        <%= review.rating %> |
+        <%= review.description %> |
+        <%= link_to "Edit Review", edit_product_review_path(@product, review) %> |
+        <%= link_to "Delete Review", product_review_path(@product, review),
+                                 :data => {:confirm => "Are you sure?",
+                                                :method => "delete"} %>
+      </li>
+    <% end %>
+  </ul>
+<% else %>
+  <p>Be the first to leave a review.</p>
+<% end %>
+
+
+<p><%= link_to "Edit Product", edit_product_path(@product) %></p>
+<p><%= link_to "Delete Product", product_path(@product),
                          :data => {:confirm => "You sure?",
                                    :method => "delete"} %></p>
 
