--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -10,8 +10,8 @@
   <ul>
     <% @product.reviews.each do |review| %>
       <li>
-        <%= review.rating %> |
-        <%= review.description %> |
+        Rating: <%= review.rating %> |
+        <%= review.comment %> |
         <%= link_to "Edit Review", edit_product_review_path(@product, review) %> |
         <%= link_to "Delete Review", product_review_path(@product, review),
                                  :data => {:confirm => "Are you sure?",
