minor styling, more unit tests

--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -7,7 +7,7 @@
   <%= f.number_field :price %>
   <%= f.label :origin %>
   <%= f.text_field :origin %>
-  <%= f.label :date %>
-  <%= f.date_field :date %>
+  <%= f.label :date_caught %>
+  <%= f.date_field :date_caught %>
   <%= f.submit  %>
 <% end %>
