properly seeds database for users and an admin, sets up product show page so that a user is displayed with the review

--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,7 +1,8 @@
 <h1>Fresh Fish</h1>
 
-<ul>
+
   <% @products.each do |product| %>
-    <li><%= link_to product.name, product_path(product) %></li>
+    <div>
+      <%= link_to product.name, product_path(product) %>
+    </div>
   <% end %>
-</ul>
