--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,11 +11,17 @@
   <body>
     <div class="jumbotron">
       <h1>Son of Cod</h1>
-      <% if current_user %>
+      <div class="signin">
+        <% if current_user %>
         <%= current_user.email %> | <%= link_to "Sign out", '/signout' %>
-      <% else %>
+        <% else %>
         <%= link_to "Sign up", 'signup' %> | <%= link_to "Sign in", '/signin' %>
-      <% end %>
+        <% end %>
+      </div>
+      <div class="nav">
+        <%= link_to "Home", root_path %> |
+        <%= link_to "Our Fish", products_path %>
+      </div>
     </div>
     <div class="container">
       <%= flash[:alert] %>
