--- a/app/views/reviews/_form.html.erb
+++ b/app/views/reviews/_form.html.erb
@@ -2,8 +2,8 @@
 
 <%= form_for [@product, @review] do |f| %>
   <%= f.label :comment %>
-  <%= f.text_field :comment %>
+  <%= f.text_field :comment, class: "form-control" %>
   <%= f.label :rating %>
-  <%= f.number_field :rating %>
+  <%= f.number_field :rating, class: "form-control" %>
   <p><%= f.submit %></p>
 <% end %>
