--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -17,8 +17,8 @@
       <li>
         Rating: <%= review.rating %> |
         <%= review.comment %> | left by <%= User.find(review.user_id).username %>
-        <!-- Show edit/delete review to user iff it's their review AND not an admin -->
-        <% if current_user == review.user_id  %>
+        <!-- Show edit/delete review to user iff it's their review  -->
+        <% if current_user.id == review.user_id  %>
           | <%= link_to "Edit Review", edit_product_review_path(@product, review) %>
         <% end %>
         <% if current_user == review.user_id || current_user.admin == true %>
