--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,12 +1,14 @@
+<%= render('layouts/errors', :object => @user) %>
+
 <h1> Sign up</h1>
 <%= form_for @user do |f| %>
   <%= f.label "Name" %>
-  <%= f.text_field :username %>
+  <%= f.text_field :username, class: "form-control" %>
   <%= f.label "Email" %>
-  <%= f.text_field :email %>
+  <%= f.text_field :email, class: "form-control" %>
   <%= f.label "Password" %>
-  <%= f.password_field :password %>
+  <%= f.password_field :password, class: "form-control" %>
   <%= f.label :password_confirmation %>
-  <%= f.password_field :password_confirmation %>
+  <%= f.password_field :password_confirmation, class: "form-control" %>
   <%= f.submit "Sign Up" %>
 <% end %>
