--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,12 +1,15 @@
 <h1>Fresh Fish</h1>
+<h3>All our fish our fresh caught - click on each for more detail.</h3>
 
 <% if current_user && current_user.admin == true %>
-  <p>There's more fish in the sea?</p>
-  <h3><%= link_to "Add a new Product", new_product_path %></h3>
+  <div class="alert alert-info" role="alert">
+    <h1>ADMIN: Are there more fish in the sea?</h1>
+    <h3><%= link_to "Click here to add a new fish", new_product_path %></h3>
+  </div>
 <% end %>
 
 <% @products.each do |product| %>
-  <div>
+  <div class="fish">
     <%= link_to product.name, product_path(product) %>
   </div>
 <% end %>
